<resources>
    <string name="app_name">Taxi QR Reader</string>
    <string name="list">ثبت نام شده ها</string>
    <string name="scan_barcode">اسکن بارکد</string>
    <string name="driver_info">اطلاعات راننده</string>
    <string name="ok">تایید</string>
    <string name="brand">برند</string>
    <string name="model">مدل</string>
    <string name="year">سال تولید</string>
    <string name="usage">کاربری</string>
    <string name="company">شرکت</string>
    <string name="color">رنگ</string>
    <string name="phone_number">شماره ی موبایل</string>
    <string name="taxi_inquiry">استعلام تاکسیرانی</string>
    <string name="driver_code">کد راننده</string>
    <string name="inquiry_alert">به منظور دریافت اطلاعات تاکسی موردنظر \n شماره پلاک خودرو را وارد نموده و تایید را
        بزنید
    </string>
    <string name="clear_form">خالی کردن فرم</string>
    <string name="mobile_alert">شماره موبایل را وارد کنید</string>
    <string name="enter">ورود</string>
</resources>
